# AVX-SSE-memcpy

./: CMakeLists.txt  README.md  avxmem.h  main.c  memmove.c  memset.c
